# src/openapi/paths.yml
@@ -1,7 +1,7 @@
 "/users":
     get:
-      # security:
-      # - bearerAuth: []
+      security:
+      - bearerAuth: []
       tags:
       - User
       summary: Recoger todos los usuarios en memoria
@@ -15,6 +15,8 @@
                 type: array
                 items:
                   $ref: "#/components/schemas/Users"
+        404:
+          description: No autorizado 
     post:
       tags:
       - User
